# horus-sdk

./: .gitignore  MODULE.bazel  README.md  VERSION
cpp/: .clang-format  .clang-tidy  .clangd  BUILD.bazel  CMakeLists.txt  README.md
cpp/cmake/: HorusSdkConfig.cmake.in  HorusSdkProtobuf.cmake
cpp/data/: sanitizer_ignorelist.txt
cpp/examples/: BUILD.bazel  CMakeLists.txt  helpers.cpp  helpers.h  print_events.cpp  print_health_status.cpp  print_logs.cpp  print_occupancy_map.cpp  run.sh
cpp/horus/: attributes.h  optimization.h  sdk.cpp  sdk.h  sdk_test.cpp  source_location.h
cpp/horus/event_loop/: README.md  event_loop.cpp  event_loop.h  event_loop_test.cpp  handle.h  uv.cpp  uv.h  uv_handles_generator.cpp  waker.cpp  waker.h
cpp/horus/functional/: move_only_function.h
cpp/horus/future/: README.md  any.h  async.h  async_test.cpp  attach.h  by_ref.h  cancel.h  channel.h  channel_test.cpp  completed.h  core_owner.cpp  core_owner.h  from_continuation.h  from_continuation_test.cpp  from_poll.h  future.h  info.h  join.h  join_test.cpp  loop.h  loop_test.cpp  map.h  map_to.h  one_of.h  operator.h  owner.h  pipe.h  poll.cpp  poll.h  race.h  race_test.cpp  rejected.h  resolved.h  run.h  shared.h  shared_test.cpp  signal.cpp  signal.h  then.h  then_test.cpp  (+7 more)
cpp/horus/hash/: fnv1a.h
cpp/horus/internal/: attributes.h.in  bitset.h  enum.cpp  enum.h  pointer_arithmetic.h  pointer_cast.h  source_location.h  tuple.h  type_traits.h  unsafe_union.h  unsafe_union_aligned_bytes.h  unsafe_union_union.h  vector.h  void.h
cpp/horus/logs/: format.cpp  format.h
cpp/horus/pb/: README.md  alias.h  buffer.cpp  buffer.h  calibration_map_pb.cpp  calibration_map_pb.h  cow.h  cow_bytes.cpp  cow_bytes.h  cow_bytes_test.cpp  cow_repeated.h  cow_repeated_test.cpp  cow_span.h  cow_span_test.cpp  cow_test.cpp  message.cpp  message.h  message_test.cpp  pbf_buffer_specialization.h  profiling_pb.cpp  profiling_pb.h  repeated_iterator.h  resources_pb.cpp  resources_pb.h  rpc_pb.cpp  rpc_pb.h  serialize.cpp  serialize.h  serialize_test.cpp  types.h  unaligned_span.h
cpp/horus/pb/config/: metadata_pb.cpp  metadata_pb.h
cpp/horus/pb/detection_merger/: service_client.h  service_handler.cpp  service_handler.h  service_pb.cpp  service_pb.h
cpp/horus/pb/detection_service/: detection_pb.cpp  detection_pb.h  detection_service_client.h  detection_service_handler.cpp  detection_service_handler.h  detection_service_pb.cpp  detection_service_pb.h
cpp/horus/pb/license_server/: messages_pb.cpp  messages_pb.h
cpp/horus/pb/logs/: common_pb.cpp  common_pb.h  logs_pb.cpp  logs_pb.h  message_pb.cpp  message_pb.h  metadata_pb.cpp  metadata_pb.h
cpp/horus/pb/notification_service/: service_client.h  service_handler.cpp  service_handler.h  service_pb.cpp  service_pb.h
cpp/horus/pb/point/: point_message_pb.cpp  point_message_pb.h
cpp/horus/pb/point_aggregator/: point_aggregator_service_client.h  point_aggregator_service_handler.cpp  point_aggregator_service_handler.h  point_aggregator_service_pb.cpp  point_aggregator_service_pb.h
cpp/horus/pb/preprocessing/: messages_pb.cpp  messages_pb.h
cpp/horus/pb/project_manager/: service_client.h  service_handler.cpp  service_handler.h  service_pb.cpp  service_pb.h
cpp/horus/pb/rpc/: message_pb.cpp  message_pb.h
cpp/horus/pb/status_service/: messages_pb.cpp  messages_pb.h  service_client.h  service_handler.cpp  service_handler.h  service_pb.cpp  service_pb.h
cpp/horus/pb/testing/: messages_pb.cpp  messages_pb.h
cpp/horus/pointer/: arithmetic.h  cast.h  erased.cpp  erased.h  unsafe_cast.h
cpp/horus/rpc/: README.md  base_client.cpp  base_client.h  base_handler.cpp  base_handler.h  client_handler.h  endpoint.cpp  endpoint.h  retry_policy.h  services.h  ws.cpp  ws.h  ws_test.cpp
cpp/horus/rpc/internal/: subscriber_set.h
cpp/horus/sdk/: errors.h  health.cpp  health.h  logs.cpp  logs.h  objects.h  point_clouds.h  profiling.cpp  profiling.h  sensor.h  version.cpp  version.h  zone_events.h
cpp/horus/strings/: ansi.cpp  ansi.h  chrono.h  erased_sink.h  fallback.h  logging.cpp  logging.h  pad.h  pad_test.cpp  stdio.h  str_cat.h  str_cat_test.cpp  str_sink.cpp  str_sink.h  str_sink_erased.h  string_view.cpp  string_view.h  stringify.cpp  stringify.h
cpp/horus/testing/: event_loop.h  event_loop_test.cpp  timing.h  ws_server.cpp  ws_server.h
cpp/horus/type_traits/: conjunction.h  pack.h
cpp/horus/types/: in_place.h  intrusive_list.h  list.h  move_marker.h  one_of.cpp  one_of.h  one_of_tag.h  owned.h  scope_guard.h  span.h  string_view.cpp  string_view.h  union.h
cpp/horus/utility/: discard.h
py/: BUILD.bazel  README.md  pyproject.toml  requirements_lock.txt
py/examples/: BUILD.bazel  print_all.py  print_dl_boxes.py  print_health_status.py  print_logs.py  print_object_counts.py  print_object_zones_and_zone_events.py  print_occupancy_map.py  print_sensor_status.py  profile_detection.py
py/examples/profiling/: README.md  profile_horus.py
py/horus/: __init__.py
py/horus/helpers/: cached_awaitable.py
py/horus/logs/: format.py
py/horus/pb/: calibration_map_pb2.py  calibration_map_pb2.pyi  profiling_pb2.py  profiling_pb2.pyi  resources_pb2.py  resources_pb2.pyi  rpc_pb2.py  rpc_pb2.pyi
py/horus/pb/config/: metadata_pb2.py  metadata_pb2.pyi
py/horus/pb/detection_merger/: service_client.py  service_handler.py  service_pb2.py  service_pb2.pyi
py/horus/pb/detection_service/: detection_pb2.py  detection_pb2.pyi  detection_service_client.py  detection_service_handler.py  detection_service_pb2.py
py/horus/pb/license_server/: messages_pb2.py  messages_pb2.pyi
py/horus/pb/logs/: common_pb2.py  common_pb2.pyi  logs_pb2.py  logs_pb2.pyi  message_pb2.py  message_pb2.pyi  metadata_pb2.py  metadata_pb2.pyi
py/horus/pb/notification_service/: service_client.py  service_handler.py  (+2 more)
py/horus/proto/: __init__.py
py/horus/rpc/: base_client.py  base_handler.py  client.py  client_listener_pair.py  services.py  websocket.py
py/horus/sdk/: __init__.py  common.py  detection.py  health.py  logs.py  point_frame.py  profiling.py  sensor.py  services.py  version.py
(+106 files in other folders)
