# Bazel support for the Horus SDK.
#
# This is experimental and is not intended for external use.

module(name = "horus_sdk")

bazel_dep(name = "rules_foreign_cc", version = "0.15.0")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "ixwebsocket",
    urls = ["https://github.com/machinezone/IXWebSocket/archive/refs/tags/v11.4.6.zip"],
    strip_prefix = "IXWebSocket-11.4.6",
    integrity = "sha256-mfkojg90KtCLxg2Zq+72Fpo78Tf5we8cyl05/7vp1Es=",
    build_file_content = """
filegroup(
    name = "srcs",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
""",
)

http_archive(
    name = "libuv",
    urls = ["https://github.com/libuv/libuv/archive/refs/tags/v1.51.0.zip"],
    strip_prefix = "libuv-1.51.0",
    integrity = "sha256-VOHhCMVLLR3K7g0WchOFQE/JXMKizS3rUeNSnCAtZFU=",
    build_file_content = """
filegroup(
    name = "srcs",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
""",
)

http_archive(
    name = "protozero",
    urls = ["https://github.com/mapbox/protozero/archive/refs/tags/v1.8.1.zip"],
    strip_prefix = "protozero-1.8.1",
    integrity = "sha256-LLLTy2r1DAk6RnUqpOKAvTRVP2M4Z/k4VpoZgg2DMrM=",
    patch_cmds = [
        "sed -i 's/^class basic_pbf_writer {$/class basic_pbf_writer { public:/g' include/protozero/basic_pbf_writer.hpp",
        "rm CMakeLists.txt",
    ],
    build_file_content = """
filegroup(
    name = "srcs",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
""",
)
