[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "horus"
version = "0.0.1"
authors = [{ name = "Seoul Robotics", email = "support@seoulrobotics.org" }]
description = "Python SDK for interacting with Horus."
requires-python = ">=3.8"
dependencies = ["protobuf ~= 5.27", "websockets ~= 13.0"]

[project.urls]
Homepage = "https://github.com/seoulrobotics/horus-sdk"

[tool.black]
exclude = '''
logs/format.py
|pb
|rpc/services.py
'''

[tool.mypy]
strict = true
enable_error_code = ["explicit-override"]
implicit_reexport = true

[[tool.mypy.overrides]]
module = "horus.pb.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
  "print_all",
  "print_logs",
  "print_dl_boxes",
  "print_object_counts",
  "print_occupancy_map",
  "profile_detection",
]
disable_error_code = ["var-annotated"]  # To avoid annotating "Future[Unknown]".
